Fixed formatting issues with images, fixed bug with delete icon not showing properly

--- a/src/components/Blog/BlogPost/Gallery/Gallery.scss
+++ b/src/components/Blog/BlogPost/Gallery/Gallery.scss
@@ -8,19 +8,6 @@
     overflow:hidden;
 }
 
-.galleryContainer{
-    .image-gallery-thumbnail .image-gallery-thumbnail-inner{
-        color: red;
-        background-color: red;
-    }
-    height:440px;
-}
-
-.image-gallery-thumbnail .image-gallery-thumbnail-inner{
-    color: red;
-    background-color: red;
-}
-
 .image{
     max-width: 100%;
     max-height: 100%;
