--- a/src/components/Blog/BlogPost/Gallery/image-gallery.css
+++ b/src/components/Blog/BlogPost/Gallery/image-gallery.css
@@ -55,7 +55,8 @@
     left: 0;
     position: absolute;
     top: 0;
-    height:340px; }
+    height:340px;
+    width: 100% }
 
   /*******/
 
